--- a/lesson_1/index.html
+++ b/lesson_1/index.html
@@ -4,8 +4,10 @@
 
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./style.css">
     <title>Elephantidae</title>
   </head>
+
   <body>
     <h1>Elephantidae</h1>
     <!-- <h2>Elephantidae</h2>
@@ -68,7 +70,7 @@
         <li><del>Mammonts</del></li>
     </ol>
 
-    <table border="1">
+    <table>
         <thead>
           <tr>
             <th>Имя</th>
