--- a/lesson_2/homework_2.html
+++ b/lesson_2/homework_2.html
@@ -30,7 +30,8 @@
         <label for="age">Age:</label>
         <input
           type="number"
-          name=""
+          min="1"
+          max="130"
           id="age"
           placeholder="Enter your age..."
           required
